--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -2,6 +2,9 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
 
+  <%= f.label :category_id %>
+  <%= f.collection_select(:category_id, Category.all, :id, :title) %>
+
   <%= f.label :description %>
   <%= f.text_field :description %>
 
