--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -23,5 +23,5 @@ All Jobs for <strong><%= @company.name %></strong>
           <li>Position:<%= contact.position %></li>
           <li>Email: <%= contact.email %></li>
         </ul>
-        <%= link_to "Delete Contact", company_path(@company), method: 'delete' %>
+        <%= link_to "Delete Contact", company_contact_path(contact.company, contact), method: 'delete' %>
     <% end %>
