--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,7 +1,7 @@
 All Jobs for <strong><%= @company.name %></strong>
 
 <% @company.jobs.each do |job| %>
-  <ul><%= job.title %></ul>
+  <ul><%= link_to job.title, job_path(job) %></ul>
 <% end %>
 
 <h4>Create New Contact for <%= @company.name %></h4>
