--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -7,6 +7,6 @@
   Company: <ul><%= job.company.name %></ul>
   City: <ul><%= job.city %></ul>
   Interest: <ul><%= job.level_of_interest %></ul>
-  <%= link_to "Edit", edit_company_job_path(job) %>
-  <%= link_to "Delete", company_job_path(job), method: "delete" %>
+  <%= link_to "Edit", edit_company_path(job) %>
+  <%= link_to "Delete", company_path(job), method: "delete" %>
 <% end %>
