--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,9 +1,11 @@
-<%= form_for [@company, @job] do |f| %>
+<%= form_for [@job] do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
 
   <%= f.label :category_id %>
   <%= f.collection_select(:category_id, Category.all, :id, :title) %>
+  <%= f.label :company_id %>
+  <%= f.collection_select(:company_id, Company.all, :id, :name) %>
 
   <%= f.label :description %>
   <%= f.text_field :description %>
