adds job update test/controller/view, changes job destroy controller, ATP

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,5 +2,6 @@
 
 <% @jobs.each do |job| %>
   <ul><%= link_to job.title, job_path(job) %> at <%= job.company.name %></ul>
-  <p><%= link_to "Delete", job_path(job), method: :delete %></p>
+  <!-- <p><%= link_to "Delete", job_path(job), method: :delete %></p>
+  <p><%= link_to "Edit", edit_job_path(job)%></p> -->
 <% end %>
