gets middle section out of nav

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,8 +1,9 @@
-<%= form_for @category do |f| %>
+<section class="middle-section">
+  <%= form_for @category do |f| %>
 
-  <%= f.label :title %>
-  <%= f.text_field :title %>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
 
-  <%= f.submit %>
-<% end %>
-
+    <%= f.submit %>
+  <% end %>
+</section>
