--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,3 +1,5 @@
-<h2>Edit: <%= @category.title %> title here!</h2>
+<section class="middle-section">
+  <h2>Edit: <%= @category.title %> title here!</h2>
 
-<%= render partial: "form" %>
+  <%= render partial: "form" %>
+</section>
