--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -19,10 +19,11 @@ header h1 {
   right:0;
   text-align: center;
   font-family: 'Stoke';
+  font-weight: bold;
   /* text vertical-align: center; */
   background: #5B5B5B;
   color: white;
-  height: 40px;
+  height: 70px;
   width: 100%;
   padding: 12px 0px 0px;
   /* margin-top: 18px; */
@@ -35,7 +36,7 @@ nav {
 nav li {
   font-family: 'Stoke';
   display: inline-block;
-  padding: 60px 120px 20px;
+  padding: 90px 120px 20px;
 }
 
 nav li a {
@@ -47,4 +48,12 @@ nav li:hover {
   background: #5B5B5B;
   color: #7D7C7A;
   cursor: pointer;
+}
+.middle-section {
+  padding: 100px;
+  text-align: center;
+  /* background: #C9C19F; */
+}
+.middle-section h3{
+  font-size: 80px;
 }
