--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,14 +1,16 @@
-<h3>Job Categories</h3>
+<section class="middle-section">
+  <h3>Job Categories</h3>
 
-<a href="/categories/new">Create New Category</a>
+  <a href="/categories/new">Create New Category</a>
 
-<ul>
-  <% @categories.each do |category| %>
-  <li class=category_<%= category.id %>>
-    <%= link_to category.title, category_path(category) %>:
-    <%= category.jobs.count %> Jobs
-    <%= link_to "Edit", edit_category_path(category) %>
-    <%= link_to "Delete", category_path(category), method: "delete" %>
-  </li>
-  <% end %>
-</ul>
+  <ul>
+    <% @categories.each do |category| %>
+    <li class=category_<%= category.id %>>
+      <%= link_to category.title, category_path(category) %>:
+      <%= category.jobs.count %> Jobs
+      <%= link_to "Edit", edit_category_path(category) %>
+      <%= link_to "Delete", category_path(category), method: "delete" %>
+    </li>
+    <% end %>
+  </ul>
+</section>
