--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Create a New Category</h1>
+<section class="middle-section">
+  <h1>Create a New Category</h1>
 
-<%= render partial: "form" %>
+  <%= render partial: "form" %>
 
-<%= link_to '<< Back to Category List', categories_path %>
+  <%= link_to '<< Back to Category List', categories_path %>
+</section>
