--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,6 +1,8 @@
-<%= form_for @company do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+<section class="middle-section">
+  <%= form_for @company do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
 
-  <%= f.submit %>
-<% end %>
+    <%= f.submit %>
+  <% end %>
+</section>
