--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,3 +1,5 @@
-<h2>Edit <%= @company.name %> here!</h2>
+<section class="middle-section">
+  <h2>Edit <%= @company.name %> here!</h2>
 
-<%= render partial: "form" %>
+  <%= render partial: "form" %>
+</section>
