--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Create a new company here!</h2>
+<section class="middle-section">
+  <h2>Create a new company here!</h2>
 
-<%= render partial: "form" %>
-
+  <%= render partial: "form" %>
+</section>
