--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,9 +1,11 @@
-<h1> <%= @header %></h1>
+<section class="middle-section">
+  <h1> <%= @header %></h1>
 
-<% @jobs.each do |job| %>
-    <p><%= link_to "#{job.title} at #{job.company.name}", job_path(job) %></p>
-    <li><%= job.city %></li>
-    <ul>
-      <li>Level of interest: <%= job.level_of_interest %></li>
-    </ul>
-  <% end %><br/>
+  <% @jobs.each do |job| %>
+      <p><%= link_to "#{job.title} at #{job.company.name}", job_path(job) %></p>
+      <li><%= job.city %></li>
+      <ul>
+        <li>Level of interest: <%= job.level_of_interest %></li>
+      </ul>
+    <% end %><br/>
+</section>
