--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,3 +1,5 @@
-<h2>Create a new job</h2>
+<section class="middle-section">
+  <h2>Create a new job</h2>
 
-<%= render partial: "form" %>
+  <%= render partial: "form" %>
+</section>
