--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -5,10 +5,6 @@
 #EDF7B5 yellow */
 
 header {
-  /* background: #FAF0E6; */
-  /* background: #364958;
-  color: #c9e4ca;
-  font-family: 'Monoton', cursive; */
   height: 50px;
   /* padding: 0px 25px; */
 }
@@ -20,18 +16,15 @@ header h1 {
   text-align: center;
   font-family: 'Stoke';
   font-weight: bold;
-  /* text vertical-align: center; */
   background: #5B5B5B;
   color: white;
   height: 70px;
   width: 100%;
   padding: 12px 0px 0px;
-  /* margin-top: 18px; */
 }
 nav {
   background: #7D7C7A;
-  /* padding: 5%; */
-  /* height: 70px; */
+  /* padding-bottom: 0px; */
 }
 nav li {
   font-family: 'Stoke';
@@ -55,5 +48,8 @@ nav li:hover {
   /* background: #C9C19F; */
 }
 .middle-section h3{
+  font-family: 'Stoke';
   font-size: 80px;
+  padding: 10px 0px 30px;
+  color: #61304B;
 }
