--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,13 +1,22 @@
 <section class="middle-section">
   <h3>Companies</h3>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Company</th>
+        <th scope="col">Edit</th>
+        <th scope="col">Delete</th>
+      </tr>
+    </thead>
 
-  <ul>
     <% @companies.each do |company| %>
-    <li class=company_<%= company.id %>>
-      <%= link_to company.name, company_path(company) %>:
-      <%= link_to "Edit", edit_company_path(company) %>
-      <%= link_to "Delete", company_path(company), method: "delete" %>
-    </li>
+    <tbody>
+      <tr>
+        <td><%= link_to company.name, company_path(company) %></td>
+        <td><%= link_to "Edit", edit_company_path(company) %></td>
+        <td><%= link_to "Delete", company_path(company), method: "delete" %></td>
+      </tr>
     <% end %>
-  </ul>
+    </tbody>
+  </table>
 </section>
