--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -3,9 +3,7 @@
 
   <% @jobs.each do |job| %>
       <p><%= link_to "#{job.title} at #{job.company.name}", job_path(job) %></p>
-      <li><%= job.city %></li>
-      <ul>
-        <li>Level of interest: <%= job.level_of_interest %></li>
-      </ul>
+      <p><%= job.city %></p>
+        <p>Level of interest: <%= job.level_of_interest %></p>
     <% end %><br/>
 </section>
