--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -16,6 +16,7 @@ header h1 {
   text-align: center;
   font-family: 'Stoke';
   font-weight: bold;
+  font-size: 50px;
   background: #5B5B5B;
   color: white;
   height: 70px;
