--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -7,7 +7,6 @@
   Company: <ul><%= link_to job.company.name, company_path(job.company) %></ul>
   City: <ul><%= link_to job.city, jobs_path(location: "#{job.city}") %></ul>
   Interest: <ul><%= job.level_of_interest %></ul>
-  <!-- sort by level of interest on the same page? -->
-  <%= link_to "Edit", edit_company_path(job) %>
-  <%= link_to "Delete", company_path(job), method: "delete" %>
+  <%= link_to "Edit", edit_job_path(job) %>
+  <%= link_to "Delete", job_path(job), method: "delete" %>
 <% end %>
