--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -4,8 +4,8 @@
     <thead>
       <tr>
         <th scope="col">Company</th>
-        <th scope="col">Edit</th>
-        <th scope="col">Delete</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
       </tr>
     </thead>
 
