--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,9 +1,11 @@
 <h1> <%= @header %></h1>
 
+<h3><%= link_to "Create New Job", new_job_path %></h3>
+
 <% @jobs.each do |job| %>
     <p><%= link_to "#{job.title} at #{job.company.name}", job_path(job) %></p>
-    <li><%= job.city %></li>
     <ul>
+    <li><%= link_to job.city, jobs_path(location: job.city) %></li>
       <li>Level of interest: <%= job.level_of_interest %></li>
     </ul>
   <% end %><br/>
