--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -5,9 +5,22 @@
   <% end %>
 
   <h4>Jobs By Location</h4>
-  <% @count_by_location.each do |city, count| %>
-  <p><%= link_to city, jobs_path(location: city) %> Jobs   <%= count %> Jobs </p>
-  <% end %>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">City</th>
+        <th scope="col">Job</th>
+      </tr>
+    </thead>
+      <% @count_by_location.each do |city, count| %>
+      <tbody>
+        <tr>
+          <td><%= link_to city, jobs_path(location: city) %></td>
+          <td><%= count %></td>
+        </tr>
+      </tbody>
+      <% end %>
+  </table>
 
   <h4>Top Companies by Interest</h4>
   <% @top_three_by_average_level_of_interest.each do |company| %>
