--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,14 +1,30 @@
-<h3>Job Categories</h3>
+<section class="middle-section">
+  <h3>Job Categories</h3>
 
-<%= link_to "Create New Category", new_category_path %>
+  <a class="create" href="/categories/new">Create New Category</a>
+  <br>
+  <br>
+  <br>
+  <table class="table table-borderless">
+    <thead>
+      <tr>
+        <th scope="col">Category</th>
+        <th scope="col">Job Count</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
 
-<ul>
-  <% @categories.each do |category| %>
-  <li class=category_<%= category.id %>>
-    <%= link_to category.title, category_path(category) %>:
-    <%= "#{category.jobs.count} Jobs"%>
-    <%= link_to "Edit", edit_category_path(category) %>
-    <%= link_to "Delete", category_path(category), method: "delete" %>
-  </li>
-  <% end %>
-</ul>
+    <% @categories.each do |category| %>
+    <tbody>
+      <tr>
+        <td><%= link_to category.title, category_path(category) %></td>
+        <td><%= category.jobs.count %></td>
+        <td><%= link_to "Edit", edit_category_path(category) %></td>
+        <td><%= link_to "Delete", category_path(category), method: "delete" %></td>
+      </tr>
+      <% end %>
+      </tr>
+    </tbody>
+  </table>
+</section>
