--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,12 +1,25 @@
-<h1>All Companies</h1>
 
-<h3><%= link_to "Create New Company", new_company_path %></h3>
-<ul>
-  <% @companies.each do |company| %>
-  <li class=company_<%= company.id %>>
-    <%= link_to company.name, company_path(company) %>:
-    <%= link_to "Edit", edit_company_path(company) %>
-    <%= link_to "Delete", company_path(company), method: "delete" %>
-  </li>
-  <% end %>
-</ul>
+<section class="middle-section">
+  <h3>Companies</h3>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Company</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+
+    <% @companies.each do |company| %>
+    <tbody>
+      <tr class=company_<%= company.id%>>
+        <td><%= link_to company.name, company_path(company) %></td>
+        <td><%= link_to company.name, company_path(company) %></td>
+        <td><%= link_to "Edit", edit_company_path(company) %></td>
+        <td><%= link_to "Delete", company_path(company), method: "delete" %></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+</section>
+
