--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,3 +1,4 @@
-<h2>Edit <%= @job.title %> here!</h2>
+<section class="middle-section">
+  <h2>Edit <%= @job.title %> here!</h2>
 
 <%= render partial: "form" %>
