--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -22,8 +22,7 @@
   <% @comments.each do |comment| %>
     <ul>
       <li><%= comment.body %></li>
-      <li><%= comment.created_at %></li>
-      <li><%= comment.updated_at %></li>
+      <li>Created at: <%= comment.created_at.in_time_zone("Mountain Time (US & Canada)").strftime('%m-%d-%Y %I:%M:%S') %></li>
     </ul>
   <% end %>
 </section>
