--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,5 +1,5 @@
 <section class="middle-section">
   <h2>Edit <%= @job.title %> here!</h2>
 
-  <%= render partial: "update-form" %>
+  <%= render partial: "form" %>
 </section>
