--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,6 +1,8 @@
 <section class="middle-section">
   <h3> <%= @header %></h3>
 
+<h4><%= link_to "Create New Job", new_job_path %></h4>
+
   <table class="table table-hover">
     <thead>
       <tr>
@@ -14,7 +16,7 @@
     <tbody>
       <tr>
         <th><%= link_to "#{job.title} at #{job.company.name}", job_path(job) %></th>
-        <td><%= job.city %></td>
+        <td><%= link_to job.city, jobs_path(location: job.city) %></td>
         <td><%= job.level_of_interest %></td>
         <td>@mdo</td>
       </tr>
