--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,6 +1,8 @@
 
 <section class="middle-section">
   <h3>Companies</h3>
+
+    <a class="create" href="/companies/new">Create New Company</a>
   <table class="table table-hover">
     <thead>
       <tr>
@@ -22,4 +24,3 @@
     </tbody>
   </table>
 </section>
-
