--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,15 +1,31 @@
 <section class="middle-section">
-  <h1><strong><%= @category.title %></strong> Jobs</h1>
+  <h3><strong><%= @category.title %></strong> Jobs</h3>
 
   <p><a href="/jobs/new">Add New Job</a></p>
 
-  <% @category.jobs.each do |job| %>
-    Title: <ul><%= job.title %></ul>
-    Company: <ul><%= job.company.name %></ul>
-    City: <ul><%= job.city %></ul>
-    Interest: <ul><%= job.level_of_interest %></ul>
-    <%= link_to "Edit", edit_company_path(job) %>
-    <%= link_to "Delete", company_path(job), method: "delete" %>
-  <% end %>
-</section>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Title</th>
+        <th scope="col">Company</th>
+        <th scope="col">City</th>
+        <th scope="col">Interest</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
 
+    <% @category.jobs.each do |job| %>
+    <tbody>
+      <tr>
+        <th><%= job.title %></th>
+        <td><%= job.company.name %></td>
+        <td><%= job.city %></td>
+        <td><%= job.level_of_interest %></td>
+        <td><%= link_to "Edit", edit_company_path(job) %></td>
+        <td><%= link_to "Delete", company_path(job), method: "delete" %></td>
+      </tr>
+    </tbody>
+    <% end %>
+  </table>
+</section>
