--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,6 @@
 <section class="middle-section">
   <h3>Jobs By Interest</h3>
-  <table class="table table-sm table-dark">
+  <table class="table table-hover">
     <thead>
       <tr>
         <th scope="col">Interest Level</th>
